prebuilt_files = [
    'um039_010b_LZ.bin',
    'ma000_25_LZ.bin',
    'um024_006_LZ.bin',
    'um001_011_LZ.bin',
    'um038_022_LZ.bin',
    'um036_011_LZ.bin',
    'um019_010_LZ.bin',
    'um004_013_LZ.bin',
    'mit014_LZ.bin',
    'um016_004_LZ.bin',
    'um042_040_LZ.bin',
    'um039_006a_LZ.bin',
    'mit018_LZ.bin',
    'um042_031_LZ.bin',
    'um039_017_LZ.bin',
    'um036_003_LZ.bin',
    'um039_009_LZ.bin',
    'um019_002_LZ.bin',
    'um004_001_LZ.bin',
    'um033_001_LZ.bin',
    'mit006_LZ.bin',
    'um042_052_LZ.bin',
    'um039_021_LZ.bin',
    'rd099_LZ.bin',
    'ma000_01_LZ.bin',
    'rd502_LZ.bin',
    'um043_020_LZ.bin',
    'um038_006_LZ.bin',
    'um025_005_LZ.bin',
    'msp000_bg_LZ.bin',
    'um020_007_LZ.bin',
    'mp000_LZ.bin',
    'um017_007_LZ.bin',
    'rd087_LZ.bin',
    'um043_043_LZ.bin',
    'um038_018_LZ.bin',
    'mre000_00_LZ.bin',
    'ma000_13_LZ.bin',
    'um043_032_LZ.bin',
    'rd510_LZ.bin',
    'um020_015_LZ.bin',
    'rd095_LZ.bin',
    'mni000_00_LZ.bin',
    'um005_002_LZ.bin',
    'um018_001_LZ.bin',
    'um014_002_LZ.bin',
    'um023_002_LZ.bin',
    'rd042_LZ.bin',
    'rd142_LZ.bin',
    'rd021_LZ.bin',
    'um041_002_LZ.bin',
    'pam002_00_LZ.bin',
    'um028_033_LZ.bin',
    'um009_013_LZ.bin',
    'um030_020_LZ.bin',
    'um023_010_LZ.bin',
    'rn001_26_LZ.bin',
    'rd050_LZ.bin',
    'rd133_LZ.bin',
    'rd033_LZ.bin',
    'um029_006_LZ.bin',
    'um028_021_LZ.bin',
    'um030_016_LZ.bin',
    'um022_001_LZ.bin',
    'rd066_LZ.bin',
    'title101_02_LZ.bin',
    'rn001_10_LZ.bin',
    'um028_009_LZ.bin',
    'um008_002_LZ.bin',
    'um015_001_LZ.bin',
    'um027_003_LZ.bin',
    'mp006_00_LZ.bin',
    'um030_008_LZ.bin',
    'rd105_LZ.bin',
    'ma002_00_LZ.bin',
    'um010_003_LZ.bin',
    'rd005_LZ.bin',
    'um028_017_LZ.bin',
    'mb001_00_LZ.bin',
    'rd078_LZ.bin',
    'rd009_LZ.bin',
    'um030_004_LZ.bin',
    'rd109_LZ.bin',
    'pam000_bg_LZ.bin',
    'title003_00_LZ.bin',
    'rd074_LZ.bin',
    'um008_010_LZ.bin',
    'rn001_02_LZ.bin',
    'rd017_LZ.bin',
    'mm001_01_LZ.bin',
    'um028_005_LZ.bin',
    'ql000_01_LZ.bin',
    'um029_004_LZ.bin',
    'rd131_LZ.bin',
    'rd031_LZ.bin',
    'um028_023_LZ.bin',
    'ma001_05_LZ.bin',
    'um030_022_LZ.bin',
    'um023_012_LZ.bin',
    'um009_011_LZ.bin',
    'um201_004_LZ.bin',
    'rd052_LZ.bin',
    'rn001_24_LZ.bin',
    'um010_025_LZ.bin',
    'rd023_LZ.bin',
    'um026_002_LZ.bin',
    'um028_031_LZ.bin',
    'rn001_28_LZ.bin',
    'um011_002_LZ.bin',
    'mo000_00_LZ.bin',
    'um029_008_LZ.bin',
    'um039_008b_LZ.bin',
    'stl001_bg_LZ.bin',
    'um009_003_LZ.bin',
    'rd040_LZ.bin',
    'rd140_LZ.bin',
    'rd015_LZ.bin',
    'mm001_03_LZ.bin',
    'um010_013_LZ.bin',
    'um030_018_LZ.bin',
    'mmq000_00_LZ.bin',
    'rd068_LZ.bin',
    'um028_007_LZ.bin',
    'um030_006_LZ.bin',
    'mc000_LZ.bin',
    'rn001_00_LZ.bin',
    'um028_019_LZ.bin',
    'rd076_LZ.bin',
    'rd107_LZ.bin',
    'um010_001_LZ.bin',
    'rd007_LZ.bin',
    'um027_001_LZ.bin',
    'um028_015_LZ.bin',
    'rd119_LZ.bin',
    'um030_014_LZ.bin',
    'rd019_LZ.bin',
    'rn001_12_LZ.bin',
    'um015_003_LZ.bin',
    'um014_003b_LZ.bin',
    'um022_003_LZ.bin',
    'rd064_LZ.bin',
    'title101_00_LZ.bin',
    'mit104_LZ.bin',
    'um033_003_LZ.bin',
    'mit004_LZ.bin',
    'ma004_00_LZ.bin',
    'um004_003_LZ.bin',
    'um039_007a_LZ.bin',
    'um042_050_LZ.bin',
    'um042_033_LZ.bin',
    'um039_015_LZ.bin',
    'md001_00_LZ.bin',
    'um039_011b_LZ.bin',
    'um036_001_LZ.bin',
    'um001_003b_LZ.bin',
    'um043_014_LZ.bin',
    'um001_001_LZ.bin',
    'mps001_00_LZ.bin',
    'mit016_LZ.bin',
    'um019_012_LZ.bin',
    'um004_011_LZ.bin',
    'um039_019_LZ.bin',
    'map000_01_LZ.bin',
    'um042_042_LZ.bin',
    'um024_004_LZ.bin',
    'um042_021_LZ.bin',
    'mit008_LZ.bin',
    'ma000_27_LZ.bin',
    'um038_020_LZ.bin',
    'um036_013_LZ.bin',
    'mit075_LZ.bin',
    'title005_00_LZ.bin',
    'um001_013_LZ.bin',
    'rd097_LZ.bin',
    'um038_008_LZ.bin',
    'um018_003_LZ.bin',
    'um020_009_LZ.bin',
    'ma000_11_LZ.bin',
    'rd089_LZ.bin',
    'um017_009_LZ.bin',
    'um038_016_LZ.bin',
    'um043_030_LZ.bin',
    'rd512_LZ.bin',
    'um017_005_LZ.bin',
    'rd085_LZ.bin',
    'um043_041_LZ.bin',
    'um020_005_LZ.bin',
    'ql000_bg_LZ.bin',
    'ma000_03_LZ.bin',
    'um039_023_LZ.bin',
    'mit051_LZ.bin',
    'rd500_LZ.bin',
    'um043_022_LZ.bin',
    'rn001_08_LZ.bin',
    'um028_011_LZ.bin',
    'rd103_LZ.bin',
    'rd003_LZ.bin',
    'um027_005_LZ.bin',
    'rn001_16_LZ.bin',
    'um008_004_LZ.bin',
    'rd060_LZ.bin',
    'title101_04_LZ.bin',
    'um030_010_LZ.bin',
    'um028_022b_LZ.bin',
    'um008_008_LZ.bin',
    'um028_003_LZ.bin',
    'um010_017_LZ.bin',
    'rd011_LZ.bin',
    'rd111_LZ.bin',
    'rn001_04_LZ.bin',
    'j000_LZ.bin',
    'rd072_LZ.bin',
    'um010_009_LZ.bin',
    'um030_002_LZ.bin',
    'um028_035_LZ.bin',
    'rd027_LZ.bin',
    'rd044_LZ.bin',
    'rd144_LZ.bin',
    'rd039_LZ.bin',
    'um023_004_LZ.bin',
    'rd139_LZ.bin',
    'um014_004_LZ.bin',
    'ma001_01_LZ.bin',
    'um028_027_LZ.bin',
    'mr000_01_LZ.bin',
    'rd048_LZ.bin',
    'um014_008_LZ.bin',
    'tp002_LZ.bin',
    'rd135_LZ.bin',
    'um023_008_LZ.bin',
    'rd035_LZ.bin',
    'rd056_LZ.bin',
    'rn001_20_LZ.bin',
    'um006_001_LZ.bin',
    'um030_026_LZ.bin',
    'um023_016_LZ.bin',
    'um009_015_LZ.bin',
    'mr000_bg_LZ.bin',
    'um017_001_LZ.bin',
    'rd081_LZ.bin',
    'um043_045_LZ.bin',
    'ma000_19_LZ.bin',
    'um020_001_LZ.bin',
    'um017_003b_LZ.bin',
    'rd504_LZ.bin',
    'um025_003_LZ.bin',
    'um009_001a_LZ.bin',
    'ma000_07_LZ.bin',
    'um039_027_LZ.bin',
    'um042_001_LZ.bin',
    'rd508_LZ.bin',
    'um005_004_LZ.bin',
    'um039_005a_LZ.bin',
    'rd093_LZ.bin',
    'um017_013_LZ.bin',
    'um020_013_LZ.bin',
    'title000_bg_LZ.bin',
    'um038_012_LZ.bin',
    'rd516_LZ.bin',
    'um043_034_LZ.bin',
    'um036_021_LZ.bin',
    'ma000_15_LZ.bin',
    'um039_003b_LZ.bin',
    'pam003_00_LZ.bin',
    'um001_009_LZ.bin',
    'pam001_bg_LZ.bin',
    'um021_002_LZ.bin',
    'um016_002_LZ.bin',
    'um036_009_LZ.bin',
    'mit012_LZ.bin',
    'um019_016_LZ.bin',
    'title002_00_LZ.bin',
    'rd520_LZ.bin',
    'um038_024_LZ.bin',
    'um036_017_LZ.bin',
    'mit071_LZ.bin',
    'um001_017_LZ.bin',
    'um019_008_LZ.bin',
    'ma000_23_LZ.bin',
    'mit100_LZ.bin',
    'um033_007_LZ.bin',
    'mit000_LZ.bin',
    'title100_02_LZ.bin',
    'um019_004_LZ.bin',
    'um004_007_LZ.bin',
    'um036_005_LZ.bin',
    'ma003_00_LZ.bin',
    'um043_010_LZ.bin',
    'mp007_00_LZ.bin',
    'um001_005_LZ.bin',
    'mb000_00_LZ.bin',
    'mam000_00_LZ.bin',
    'um038_010_LZ.bin',
    'rd514_LZ.bin',
    'um043_036_LZ.bin',
    'um036_023_LZ.bin',
    'um042_011_LZ.bin',
    'ma000_17_LZ.bin',
    'stl000_bg_LZ.bin',
    'um018_005_LZ.bin',
    'um020_011_LZ.bin',
    'ma000_09_LZ.bin',
    'um017_011_LZ.bin',
    'um043_024_LZ.bin',
    'rd506_LZ.bin',
    'um038_002_LZ.bin',
    'um025_001_LZ.bin',
    'um039_025_LZ.bin',
    'um009_001c_LZ.bin',
    'ma000_05_LZ.bin',
    'um039_004a_LZ.bin',
    'rd518_LZ.bin',
    'um020_003_LZ.bin',
    'rd083_LZ.bin',
    'um001_007_LZ.bin',
    'um036_007_LZ.bin',
    'um043_012_LZ.bin',
    'mb000_02_LZ.bin',
    'mam000_02_LZ.bin',
    'um039_013_LZ.bin',
    'um036_019_LZ.bin',
    'um042_056_LZ.bin',
    'um019_006_LZ.bin',
    'title100_00_LZ.bin',
    'um004_005_LZ.bin',
    'mit102_LZ.bin',
    'um033_005_LZ.bin',
    'mit002_LZ.bin',
    'um_LZ.bin',
    'mit073_LZ.bin',
    'um001_015_LZ.bin',
    'rd522_LZ.bin',
    'um036_015_LZ.bin',
    'ml000_bg_LZ.bin',
    'ma000_21_LZ.bin',
    'stl002_00_LZ.bin',
    'um004_009_LZ.bin',
    'um024_002_LZ.bin',
    'um039_001_LZ.bin',
    'mm001_LZ.bin',
    'um019_014_LZ.bin',
    'mit010_LZ.bin',
    'rn000_00_LZ.bin',
    'rd070_LZ.bin',
    'mps000_00_LZ.bin',
    'rn001_06_LZ.bin',
    'rn001_18_LZ.bin',
    'um028_001_LZ.bin',
    'um010_015_LZ.bin',
    'rd013_LZ.bin',
    'rd113_LZ.bin',
    'rd062_LZ.bin',
    'mp001_00_LZ.bin',
    'rn001_14_LZ.bin',
    'um008_006_LZ.bin',
    'um015_005_LZ.bin',
    'ma005_00_LZ.bin',
    'um030_012_LZ.bin',
    'pam001_LZ.bin',
    'um010_019_LZ.bin',
    'um028_013_LZ.bin',
    'md000_00_LZ.bin',
    'rd101_LZ.bin',
    'um005_001a_LZ.bin',
    'rd001_LZ.bin',
    'um010_007_LZ.bin',
    'rn001_22_LZ.bin',
    'um006_003_LZ.bin',
    'mt000_bg_LZ.bin',
    'rd054_LZ.bin',
    'um201_002_LZ.bin',
    'um030_024_LZ.bin',
    'rd129_LZ.bin',
    'um023_014_LZ.bin',
    'rd029_LZ.bin',
    'ms000_bg_LZ.bin',
    'ma001_03_LZ.bin',
    'um028_025_LZ.bin',
    'rd137_LZ.bin',
    'um003_001_LZ.bin',
    'rd037_LZ.bin',
    'um009_009_LZ.bin',
    'tp000_LZ.bin',
    'um029_002_LZ.bin',
    'um034_001_LZ.bin',
    'um028_029_LZ.bin',
    'rn001_30_LZ.bin',
    'rd046_LZ.bin',
    'rd146_LZ.bin',
    'um014_006_LZ.bin',
    'um009_005_LZ.bin',
    'um023_006_LZ.bin',
    'rd058_LZ.bin',
    'um011_004_LZ.bin',
    'rd025_LZ.bin',
    'um023_018_LZ.bin',
    'um010_023_LZ.bin',
    'um030_028_LZ.bin',
    'um029_010_LZ.bin',
    'um028_016_LZ.bin',
    'rd079_LZ.bin',
    'um027_002_LZ.bin',
    'um010_002_LZ.bin',
    'rd004_LZ.bin',
    'um030_009_LZ.bin',
    'rd104_LZ.bin',
    'rd067_LZ.bin',
    'title101_03_LZ.bin',
    'um008_003_LZ.bin',
    'um014_003a_LZ.bin',
    'rn001_11_LZ.bin',
    'um028_008_LZ.bin',
    'um030_017_LZ.bin',
    'um028_004_LZ.bin',
    'rd016_LZ.bin',
    'um010_010_LZ.bin',
    'mm001_00_LZ.bin',
    'rd075_LZ.bin',
    'rn001_03_LZ.bin',
    'um008_011_LZ.bin',
    'um030_005_LZ.bin',
    'rd108_LZ.bin',
    'rd008_LZ.bin',
    'um011_001_LZ.bin',
    'um028_032_LZ.bin',
    'um026_001_LZ.bin',
    'rd120_LZ.bin',
    'rd020_LZ.bin',
    'um041_003_LZ.bin',
    'mni000_bg_LZ.bin',
    'mre000_bg_LZ.bin',
    'um044_001_LZ.bin',
    'rd143_LZ.bin',
    'rd043_LZ.bin',
    'um039_008a_LZ.bin',
    'um023_003_LZ.bin',
    'um028_020_LZ.bin',
    'ma001_06_LZ.bin',
    'rd032_LZ.bin',
    'rd132_LZ.bin',
    'um029_007_LZ.bin',
    'rn001_27_LZ.bin',
    'rd051_LZ.bin',
    'msp000_00_LZ.bin',
    'um009_012_LZ.bin',
    'um023_011_LZ.bin',
    'um030_021_LZ.bin',
    'um038_019_LZ.bin',
    'um020_006_LZ.bin',
    'rd086_LZ.bin',
    'um043_042_LZ.bin',
    'um017_006_LZ.bin',
    'rd503_LZ.bin',
    'um043_021_LZ.bin',
    'um038_007_LZ.bin',
    'um025_004_LZ.bin',
    'um039_020_LZ.bin',
    'mr001_00_LZ.bin',
    'mp004_00_LZ.bin',
    'ma000_00_LZ.bin',
    'title001_00_LZ.bin',
    'um005_003_LZ.bin',
    'um020_014_LZ.bin',
    'um017_014_LZ.bin',
    'rd094_LZ.bin',
    'um038_015_LZ.bin',
    'um043_033_LZ.bin',
    'rd511_LZ.bin',
    'ma000_12_LZ.bin',
    'um042_041_LZ.bin',
    'map000_02_LZ.bin',
    'um019_011_LZ.bin',
    'um004_012_LZ.bin',
    'mit015_LZ.bin',
    'um001_010_LZ.bin',
    'um036_010_LZ.bin',
    'um038_023_LZ.bin',
    'ma000_24_LZ.bin',
    'um024_007_LZ.bin',
    'um042_022_LZ.bin',
    'um000_00_LZ.bin',
    'um042_053_LZ.bin',
    'um039_007b_LZ.bin',
    'um019_003_LZ.bin',
    'mit007_LZ.bin',
    'mb001_bg_LZ.bin',
    'um001_002_LZ.bin',
    'um036_002_LZ.bin',
    'um001_003a_LZ.bin',
    'um039_011a_LZ.bin',
    'um042_030_LZ.bin',
    'um039_016_LZ.bin',
    'stl001_00_LZ.bin',
    'um036_024_LZ.bin',
    'mo000_bg_LZ.bin',
    'um043_031_LZ.bin',
    'rd513_LZ.bin',
    'ma000_10_LZ.bin',
    'um020_008_LZ.bin',
    'um017_008_LZ.bin',
    'rd088_LZ.bin',
    'um018_002_LZ.bin',
    'um038_009_LZ.bin',
    'um032_001_LZ.bin',
    'rd096_LZ.bin',
    'um020_016_LZ.bin',
    'mit050_LZ.bin',
    'rd501_LZ.bin',
    'um043_023_LZ.bin',
    'um038_005_LZ.bin',
    'um025_006_LZ.bin',
    'ma000_02_LZ.bin',
    'um039_022_LZ.bin',
    'rd084_LZ.bin',
    'um043_040_LZ.bin',
    'um017_004_LZ.bin',
    'um020_004_LZ.bin',
    'um043_015_LZ.bin',
    'um042_032_LZ.bin',
    'um039_014_LZ.bin',
    'um042_051_LZ.bin',
    'mit005_LZ.bin',
    'um033_002_LZ.bin',
    'um019_001_LZ.bin',
    'um004_002_LZ.bin',
    'um036_012_LZ.bin',
    'um038_021_LZ.bin',
    'mit074_LZ.bin',
    'title005_01_LZ.bin',
    'um001_012_LZ.bin',
    'um024_005_LZ.bin',
    'um042_020_LZ.bin',
    'rn001_bg_LZ.bin',
    'ma000_26_LZ.bin',
    'mit009_LZ.bin',
    'um039_010a_LZ.bin',
    'um039_006b_LZ.bin',
    'map000_00_LZ.bin',
    'um042_043_LZ.bin',
    'mmq000_bg_LZ.bin',
    'mit017_LZ.bin',
    'um039_018_LZ.bin',
    'um019_013_LZ.bin',
    'um004_010_LZ.bin',
    'rn001_01_LZ.bin',
    'um028_018_LZ.bin',
    'rd077_LZ.bin',
    'cm000_00_LZ.bin',
    'um030_007_LZ.bin',
    'rd069_LZ.bin',
    'um028_006_LZ.bin',
    'rd114_LZ.bin',
    'um030_019_LZ.bin',
    'rd014_LZ.bin',
    'mm001_02_LZ.bin',
    'um010_012_LZ.bin',
    'um008_001_LZ.bin',
    'um015_002_LZ.bin',
    'rn001_13_LZ.bin',
    'rd065_LZ.bin',
    'md001_bg_LZ.bin',
    'title101_01_LZ.bin',
    'mnd001_bg_LZ.bin',
    'um022_002_LZ.bin',
    'rd018_LZ.bin',
    'rd118_LZ.bin',
    'um030_015_LZ.bin',
    'mp000_bg_LZ.bin',
    'um028_014_LZ.bin',
    'rd006_LZ.bin',
    'rd106_LZ.bin',
    'ma005_64_LZ.bin',
    'rd053_LZ.bin',
    'ms001_00_LZ.bin',
    'um044_011_LZ.bin',
    'rn001_25_LZ.bin',
    'um006_004_LZ.bin',
    'um023_013_LZ.bin',
    'um030_023_LZ.bin',
    'mp002_00_LZ.bin',
    'um009_010_LZ.bin',
    'mt001_00_LZ.bin',
    'ma001_04_LZ.bin',
    'um029_005_LZ.bin',
    'ql000_00_LZ.bin',
    'rd030_LZ.bin',
    'rd130_LZ.bin',
    'rd141_LZ.bin',
    'rd041_LZ.bin',
    'um023_001_LZ.bin',
    'um014_001_LZ.bin',
    'um009_002_LZ.bin',
    'um029_009_LZ.bin',
    'um028_030_LZ.bin',
    'rn001_29_LZ.bin',
    'um011_003_LZ.bin',
    'um041_001_LZ.bin',
    'um010_024_LZ.bin',
    'rd022_LZ.bin',
    'um024_001_LZ.bin',
    'um039_002_LZ.bin',
    'um019_009_LZ.bin',
    'ma000_22_LZ.bin',
    'um036_016_LZ.bin',
    'rd521_LZ.bin',
    'mit070_LZ.bin',
    'um001_016_LZ.bin',
    'mit013_LZ.bin',
    'um019_017_LZ.bin',
    'um021_003_LZ.bin',
    'um001_008_LZ.bin',
    'um036_008_LZ.bin',
    'um016_003_LZ.bin',
    'mam000_01_LZ.bin',
    'mb000_01_LZ.bin',
    'um043_011_LZ.bin',
    'um036_004_LZ.bin',
    'um001_004_LZ.bin',
    'mp008_00_LZ.bin',
    'mit001_LZ.bin',
    'mit101_LZ.bin',
    'um033_006_LZ.bin',
    'um019_005_LZ.bin',
    'um004_006_LZ.bin',
    'ma000_06_LZ.bin',
    'um039_026_LZ.bin',
    'rd505_LZ.bin',
    'um038_001_LZ.bin',
    'um025_002_LZ.bin',
    'rd080_LZ.bin',
    'um043_044_LZ.bin',
    'ma000_18_LZ.bin',
    'um039_004b_LZ.bin',
    'ma000_14_LZ.bin',
    'um042_012_LZ.bin',
    'um036_020_LZ.bin',
    'mnd000_LZ.bin',
    'rd517_LZ.bin',
    'um043_035_LZ.bin',
    'um017_012_LZ.bin',
    'um020_012_LZ.bin',
    'mre001_bg_LZ.bin',
    'um018_006_LZ.bin',
    'rd509_LZ.bin',
    'rd138_LZ.bin',
    'rd038_LZ.bin',
    'um023_005_LZ.bin',
    'um014_005_LZ.bin',
    'title000_00_LZ.bin',
    'um009_006_LZ.bin',
    'rd145_LZ.bin',
    'rd045_LZ.bin',
    'rd026_LZ.bin',
    'um010_020_LZ.bin',
    'um028_034_LZ.bin',
    'um023_017_LZ.bin',
    'um030_027_LZ.bin',
    'um009_014_LZ.bin',
    'um201_001_LZ.bin',
    'rd057_LZ.bin',
    'rn001_21_LZ.bin',
    'tp003_LZ.bin',
    'um029_001_LZ.bin',
    'um023_009_LZ.bin',
    'rd034_LZ.bin',
    'rd134_LZ.bin',
    'ma001_00_LZ.bin',
    'um028_026_LZ.bin',
    'rd049_LZ.bin',
    'mr000_00_LZ.bin',
    'mp005_00_LZ.bin',
    'um030_011_LZ.bin',
    'um008_005_LZ.bin',
    'mam000_bg_LZ.bin',
    'um015_006_LZ.bin',
    'rn001_17_LZ.bin',
    'mb000_bg_LZ.bin',
    'rd061_LZ.bin',
    'um005_001b_LZ.bin',
    'rd002_LZ.bin',
    'um010_004_LZ.bin',
    'rd102_LZ.bin',
    'um027_004_LZ.bin',
    'rn001_09_LZ.bin',
    'um028_010_LZ.bin',
    'um030_003_LZ.bin',
    'um010_008_LZ.bin',
    'rn001_05_LZ.bin',
    'map000_LZ.bin',
    'um044_031_LZ.bin',
    'rd073_LZ.bin',
    'rd110_LZ.bin',
    'um010_016_LZ.bin',
    'rd010_LZ.bin',
    'pam001_00_LZ.bin',
    'um002_001_LZ.bin',
    'um035_001_LZ.bin',
    'um028_002_LZ.bin',
    'um008_009_LZ.bin',
    'rd036_LZ.bin',
    'rd136_LZ.bin',
    'tp001_LZ.bin',
    'um029_003_LZ.bin',
    'um009_008_LZ.bin',
    'ma001_02_LZ.bin',
    'um028_024_LZ.bin',
    'um009_016_LZ.bin',
    'um201_003_LZ.bin',
    'um023_015_LZ.bin',
    'rd028_LZ.bin',
    'um030_025_LZ.bin',
    'rd128_LZ.bin',
    'um006_002_LZ.bin',
    'rn001_23_LZ.bin',
    'rd055_LZ.bin',
    'rd024_LZ.bin',
    'um023_019_LZ.bin',
    'um010_022_LZ.bin',
    'stl000_00_LZ.bin',
    'um011_005_LZ.bin',
    'rd059_LZ.bin',
    'um014_007_LZ.bin',
    'um009_004_LZ.bin',
    'um023_007_LZ.bin',
    'um028_028_LZ.bin',
    'rn001_31_LZ.bin',
    'rd147_LZ.bin',
    'rd047_LZ.bin',
    'um010_014_LZ.bin',
    'rd012_LZ.bin',
    'rn000_bg_LZ.bin',
    'rn001_19_LZ.bin',
    'um028_022a_LZ.bin',
    'um030_001_LZ.bin',
    'um007_001_LZ.bin',
    'rd071_LZ.bin',
    'rn001_07_LZ.bin',
    'rd000_LZ.bin',
    'um010_006_LZ.bin',
    'rd100_LZ.bin',
    'um028_012_LZ.bin',
    'pam000_LZ.bin',
    'um010_018_LZ.bin',
    'um030_013_LZ.bin',
    'rd063_LZ.bin',
    'um044_021_LZ.bin',
    'um022_004_LZ.bin',
    'um008_007_LZ.bin',
    'um015_004_LZ.bin',
    'rn001_15_LZ.bin',
    'title100_01_LZ.bin',
    'um019_007_LZ.bin',
    'um004_004_LZ.bin',
    'md000_bg_LZ.bin',
    'mnd000_bg_LZ.bin',
    'mit003_LZ.bin',
    'mit103_LZ.bin',
    'um033_004_LZ.bin',
    'um036_018_LZ.bin',
    'um001_018_LZ.bin',
    'mc000_bg_LZ.bin',
    'um019_019_LZ.bin',
    'um039_012_LZ.bin',
    'um001_006_LZ.bin',
    'um043_013_LZ.bin',
    'um019_015_LZ.bin',
    'mit011_LZ.bin',
    'um016_001_LZ.bin',
    'um021_001_LZ.bin',
    'title004_bg_LZ.bin',
    'um033_008_LZ.bin',
    'ma000_20_LZ.bin',
    'mps000_bg_LZ.bin',
    'um024_003_LZ.bin',
    'mm000_LZ.bin',
    'um004_008_LZ.bin',
    'mit072_LZ.bin',
    'um001_014_LZ.bin',
    'um036_014_LZ.bin',
    'um043_001_LZ.bin',
    'rd523_LZ.bin',
    'ma000_08_LZ.bin',
    'um020_010_LZ.bin',
    'um017_010_LZ.bin',
    'rd090_LZ.bin',
    'um039_005b_LZ.bin',
    'mps002_00_LZ.bin',
    'um018_004_LZ.bin',
    'um042_010_LZ.bin',
    'ma000_16_LZ.bin',
    'um039_003a_LZ.bin',
    'um036_022_LZ.bin',
    'um038_011_LZ.bin',
    'rd515_LZ.bin',
    'um020_002_LZ.bin',
    'rd082_LZ.bin',
    'um043_046_LZ.bin',
    'ms000_00_LZ.bin',
    'um017_002_LZ.bin',
    'mp003_00_LZ.bin',
    'rd519_LZ.bin',
    'um039_024_LZ.bin',
    'mt000_00_LZ.bin',
    'um009_001b_LZ.bin',
    'ma000_04_LZ.bin',
    'um017_003a_LZ.bin',
    'um043_025_LZ.bin',
    'rd507_LZ.bin',
    'um038_003_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
