prebuilt_files = [
    'npc085_LZ.bin',
    'npc089_LZ.bin',
    'npc097_LZ.bin',
    'npc019_LZ.bin',
    'npc119_LZ.bin',
    'npc064_LZ.bin',
    'npc007_LZ.bin',
    'npc107_LZ.bin',
    'npc076_LZ.bin',
    'npc115_LZ.bin',
    'npc015_LZ.bin',
    'npc068_LZ.bin',
    'npc140_LZ.bin',
    'npc040_LZ.bin',
    'npc123_LZ.bin',
    'npc023_LZ.bin',
    'npc052_LZ.bin',
    'npc152_LZ.bin',
    'npc031_LZ.bin',
    'npc131_LZ.bin',
    'npc117_LZ.bin',
    'npc017_LZ.bin',
    'npc109_LZ.bin',
    'npc009_LZ.bin',
    'npc074_LZ.bin',
    'npc005_LZ.bin',
    'npc105_LZ.bin',
    'npc078_LZ.bin',
    'npc066_LZ.bin',
    'npc033_LZ.bin',
    'npc133_LZ.bin',
    'npc050_LZ.bin',
    'npc150_LZ.bin',
    'npc121_LZ.bin',
    'npc021_LZ.bin',
    'npc142_LZ.bin',
    'npc042_LZ.bin',
    'npc095_LZ.bin',
    'npc087_LZ.bin',
    'npc099_LZ.bin',
    'npc158_LZ.bin',
    'npc058_LZ.bin',
    'npc125_LZ.bin',
    'npc025_LZ.bin',
    'npc146_LZ.bin',
    'npc046_LZ.bin',
    'npc037_LZ.bin',
    'npc137_LZ.bin',
    'npc054_LZ.bin',
    'npc154_LZ.bin',
    'npc029_LZ.bin',
    'npc129_LZ.bin',
    'npc001_LZ.bin',
    'npc101_LZ.bin',
    'npc062_LZ.bin',
    'npc113_LZ.bin',
    'npc013_LZ.bin',
    'npc070_LZ.bin',
    'npc083_LZ.bin',
    'npc091_LZ.bin',
    'npc093_LZ.bin',
    'npc081_LZ.bin',
    'npc056_LZ.bin',
    'npc156_LZ.bin',
    'npc048_LZ.bin',
    'npc148_LZ.bin',
    'npc035_LZ.bin',
    'npc135_LZ.bin',
    'npc044_LZ.bin',
    'npc139_LZ.bin',
    'npc039_LZ.bin',
    'npc127_LZ.bin',
    'npc027_LZ.bin',
    'npc072_LZ.bin',
    'npc111_LZ.bin',
    'npc011_LZ.bin',
    'npc160_LZ.bin',
    'npc003_LZ.bin',
    'npc103_LZ.bin',
    'npc022_LZ.bin',
    'npc122_LZ.bin',
    'npc041_LZ.bin',
    'npc141_LZ.bin',
    'npc130_LZ.bin',
    'npc030_LZ.bin',
    'npc153_LZ.bin',
    'npc053_LZ.bin',
    'npc106_LZ.bin',
    'npc006_LZ.bin',
    'npc065_LZ.bin',
    'npc118_LZ.bin',
    'npc018_LZ.bin',
    'npc069_LZ.bin',
    'npc014_LZ.bin',
    'npc114_LZ.bin',
    'npc077_LZ.bin',
    'npc084_LZ.bin',
    'npc096_LZ.bin',
    'npc088_LZ.bin',
    'npc094_LZ.bin',
    'npc098_LZ.bin',
    'npc086_LZ.bin',
    'npc151_LZ.bin',
    'npc051_LZ.bin',
    'npc132_LZ.bin',
    'npc032_LZ.bin',
    'npc043_LZ.bin',
    'npc143_LZ.bin',
    'npc020_LZ.bin',
    'npc120_LZ.bin',
    'npc075_LZ.bin',
    'npc008_LZ.bin',
    'npc108_LZ.bin',
    'npc016_LZ.bin',
    'npc116_LZ.bin',
    'npc067_LZ.bin',
    'npc079_LZ.bin',
    'npc104_LZ.bin',
    'npc004_LZ.bin',
    'npc082_LZ.bin',
    'n000_00_LZ.bin',
    'npc090_LZ.bin',
    'npc100_LZ.bin',
    'npc071_LZ.bin',
    'npc012_LZ.bin',
    'npc112_LZ.bin',
    'npc047_LZ.bin',
    'npc147_LZ.bin',
    'npc024_LZ.bin',
    'npc124_LZ.bin',
    'npc059_LZ.bin',
    'npc159_LZ.bin',
    'npc128_LZ.bin',
    'npc028_LZ.bin',
    'npc155_LZ.bin',
    'npc055_LZ.bin',
    'npc136_LZ.bin',
    'npc036_LZ.bin',
    'npc010_LZ.bin',
    'npc110_LZ.bin',
    'npc073_LZ.bin',
    'npc102_LZ.bin',
    'npc002_LZ.bin',
    'npc134_LZ.bin',
    'npc034_LZ.bin',
    'npc149_LZ.bin',
    'npc049_LZ.bin',
    'npc157_LZ.bin',
    'npc057_LZ.bin',
    'npc026_LZ.bin',
    'npc126_LZ.bin',
    'npc038_LZ.bin',
    'npc138_LZ.bin',
    'npc045_LZ.bin',
    'npc145_LZ.bin',
    'npc092_LZ.bin',
    'npc080_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
