prebuilt_files = [
    'p115_00_LZ.bin',
    'p323_00_LZ.bin',
    'p445_00_LZ.bin',
    'p390_00_LZ.bin',
    'p359_00_LZ.bin',
    'p451_00_LZ.bin',
    'p101_00_LZ.bin',
    'p470_00_LZ.bin',
    'p193_00_LZ.bin',
    'p066_00_LZ.bin',
    'p299_00_LZ.bin',
    'p120_00_LZ.bin',
    'p302_00_LZ.bin',
    'p134_00_LZ.bin',
    'p008_00_LZ.bin',
    'p378_00_LZ.bin',
    'p464_00_LZ.bin',
    'p097_00_LZ.bin',
    'p432_00_LZ.bin',
    'p447_01_LZ.bin',
    'p354_00_LZ.bin',
    'p448_00_LZ.bin',
    'p212_00_LZ.bin',
    'p389_00_LZ.bin',
    'p426_00_LZ.bin',
    'p227_00_LZ.bin',
    'p361_00_LZ.bin',
    'p407_00_LZ.bin',
    'p280_00_LZ.bin',
    'p413_00_LZ.bin',
    'p139_00_LZ.bin',
    'p469_00_LZ.bin',
    'p005_00_LZ.bin',
    'p126_00_LZ.bin',
    'p256_00_LZ.bin',
    'p476_00_LZ.bin',
    'p148_00_LZ.bin',
    'p181_00_LZ.bin',
    'p462_00_LZ.bin',
    'p074_00_LZ.bin',
    'p304_00_LZ.bin',
    'p418_00_LZ.bin',
    'p443_00_LZ.bin',
    'p169_00_LZ.bin',
    'p396_00_LZ.bin',
    'p219_00_LZ.bin',
    'p413_02_LZ.bin',
    'p485_01_LZ.bin',
    'p439_00_LZ.bin',
    'p331_00_LZ.bin',
    'p277_00_LZ.bin',
    'p041_00_LZ.bin',
    'p491_01_LZ.bin',
    'p457_00_LZ.bin',
    'p422_01_LZ.bin',
    'p401_00_LZ.bin',
    'p367_00_LZ.bin',
    'p198_00_LZ.bin',
    'p221_00_LZ.bin',
    'p373_00_LZ.bin',
    'p415_00_LZ.bin',
    'p022_00_LZ.bin',
    'p434_00_LZ.bin',
    'p058_00_LZ.bin',
    'p488_01_LZ.bin',
    'p085_00_LZ.bin',
    'p420_00_LZ.bin',
    'p170_00_LZ.bin',
    'p200_00_LZ.bin',
    'p450_00_LZ.bin',
    'p100_00_LZ.bin',
    'p322_00_LZ.bin',
    'p444_00_LZ.bin',
    'p391_00_LZ.bin',
    'p028_00_LZ.bin',
    'p006_01_LZ.bin',
    'p073_00_LZ.bin',
    'p303_00_LZ.bin',
    'p135_00_LZ.bin',
    'p379_00_LZ.bin',
    'p465_00_LZ.bin',
    'p009_00_LZ.bin',
    'p471_00_LZ.bin',
    'p121_00_LZ.bin',
    'p067_00_LZ.bin',
    'p251_00_LZ.bin',
    'p388_00_LZ.bin',
    'p207_00_LZ.bin',
    'p082_00_LZ.bin',
    'p427_00_LZ.bin',
    'p433_00_LZ.bin',
    'p096_00_LZ.bin',
    'p025_00_LZ.bin',
    'p355_00_LZ.bin',
    'p449_00_LZ.bin',
    'p412_00_LZ.bin',
    'p138_00_LZ.bin',
    'p281_00_LZ.bin',
    'p248_00_LZ.bin',
    'p004_00_LZ.bin',
    'p468_00_LZ.bin',
    'p142_00_LZ.bin',
    'p226_00_LZ.bin',
    'p406_00_LZ.bin',
    'p239_00_LZ.bin',
    'p180_00_LZ.bin',
    'p463_00_LZ.bin',
    'p305_00_LZ.bin',
    'p133_00_LZ.bin',
    'p419_00_LZ.bin',
    'p075_00_LZ.bin',
    'p257_00_LZ.bin',
    'p127_00_LZ.bin',
    'p311_00_LZ.bin',
    'p477_00_LZ.bin',
    'p276_00_LZ.bin',
    'p089_00_LZ.bin',
    'p040_00_LZ.bin',
    'p330_00_LZ.bin',
    'p490_01_LZ.bin',
    'p456_00_LZ.bin',
    'p423_01_LZ.bin',
    'p218_00_LZ.bin',
    'p442_00_LZ.bin',
    'p168_00_LZ.bin',
    'p397_00_LZ.bin',
    'p412_02_LZ.bin',
    'p438_00_LZ.bin',
    'p112_00_LZ.bin',
    'p324_00_LZ.bin',
    'p372_00_LZ.bin',
    'p078_00_LZ.bin',
    'p287_00_LZ.bin',
    'p414_00_LZ.bin',
    'p400_00_LZ.bin',
    'p220_00_LZ.bin',
    'p421_00_LZ.bin',
    'p084_00_LZ.bin',
    'p037_00_LZ.bin',
    'p492_00_LZ.bin',
    'p171_00_LZ.bin',
    'p353_00_LZ.bin',
    'p486_00_LZ.bin',
    'p215_00_LZ.bin',
    'p059_00_LZ.bin',
    'p435_00_LZ.bin',
    'p472_00_LZ.bin',
    'p228_00_LZ.bin',
    'p252_00_LZ.bin',
    'p122_00_LZ.bin',
    'p408_00_LZ.bin',
    'p136_00_LZ.bin',
    'p246_00_LZ.bin',
    'p185_00_LZ.bin',
    'p466_00_LZ.bin',
    'p413_01_LZ.bin',
    'p117_00_LZ.bin',
    'p448_01_LZ.bin',
    'p447_00_LZ.bin',
    'p392_00_LZ.bin',
    'p453_00_LZ.bin',
    'p179_00_LZ.bin',
    'p273_00_LZ.bin',
    'p045_00_LZ.bin',
    'p429_00_LZ.bin',
    'p225_00_LZ.bin',
    'p013_00_LZ.bin',
    'p363_00_LZ.bin',
    'p319_00_LZ.bin',
    'p405_00_LZ.bin',
    'p296_00_LZ.bin',
    'p282_00_LZ.bin',
    'p411_00_LZ.bin',
    'p377_00_LZ.bin',
    'p007_00_LZ.bin',
    'p430_00_LZ.bin',
    'p356_00_LZ.bin',
    'p483_00_LZ.bin',
    'p026_00_LZ.bin',
    'p204_00_LZ.bin',
    'p424_00_LZ.bin',
    'p081_00_LZ.bin',
    'p441_00_LZ.bin',
    'p488_00_LZ.bin',
    'p394_00_LZ.bin',
    'p057_00_LZ.bin',
    'p111_00_LZ.bin',
    'p275_00_LZ.bin',
    'p043_00_LZ.bin',
    'p039_00_LZ.bin',
    'p455_00_LZ.bin',
    'p124_00_LZ.bin',
    'p312_00_LZ.bin',
    'p254_00_LZ.bin',
    'p474_00_LZ.bin',
    'p197_00_LZ.bin',
    'p368_00_LZ.bin',
    'p460_00_LZ.bin',
    'p240_00_LZ.bin',
    'p076_00_LZ.bin',
    'p306_00_LZ.bin',
    'p020_00_LZ.bin',
    'p399_00_LZ.bin',
    'p485_00_LZ.bin',
    'p436_00_LZ.bin',
    'p093_00_LZ.bin',
    'p278_00_LZ.bin',
    'p422_00_LZ.bin',
    'p491_00_LZ.bin',
    'p172_00_LZ.bin',
    'p458_00_LZ.bin',
    'p344_00_LZ.bin',
    'p259_00_LZ.bin',
    'p403_00_LZ.bin',
    'p365_00_LZ.bin',
    'p015_00_LZ.bin',
    'p147_00_LZ.bin',
    'p371_00_LZ.bin',
    'p417_00_LZ.bin',
    'p247_00_LZ.bin',
    'p071_00_LZ.bin',
    'p467_00_LZ.bin',
    'p412_01_LZ.bin',
    'p229_00_LZ.bin',
    'p473_00_LZ.bin',
    'p190_00_LZ.bin',
    'p123_00_LZ.bin',
    'p409_00_LZ.bin',
    'p315_00_LZ.bin',
    'p065_00_LZ.bin',
    'p253_00_LZ.bin',
    'p387_00_LZ.bin',
    'p452_00_LZ.bin',
    'p334_00_LZ.bin',
    'p428_00_LZ.bin',
    'p044_00_LZ.bin',
    'p116_00_LZ.bin',
    'p320_00_LZ.bin',
    'p446_00_LZ.bin',
    'p393_00_LZ.bin',
    'p410_00_LZ.bin',
    'p006_00_LZ.bin',
    'p230_00_LZ.bin',
    'p362_00_LZ.bin',
    'p297_00_LZ.bin',
    'p068_00_LZ.bin',
    'p404_00_LZ.bin',
    'p205_00_LZ.bin',
    'p425_00_LZ.bin',
    'p431_00_LZ.bin',
    'p094_00_LZ.bin',
    'p211_00_LZ.bin',
    'p027_00_LZ.bin',
    'p274_00_LZ.bin',
    'p042_00_LZ.bin',
    'p332_00_LZ.bin',
    'p421_01_LZ.bin',
    'p454_00_LZ.bin',
    'p038_00_LZ.bin',
    'p440_00_LZ.bin',
    'p489_00_LZ.bin',
    'p395_00_LZ.bin',
    'p110_00_LZ.bin',
    'p056_00_LZ.bin',
    'p260_00_LZ.bin',
    'p182_00_LZ.bin',
    'p461_00_LZ.bin',
    'p241_00_LZ.bin',
    'p077_00_LZ.bin',
    'p063_00_LZ.bin',
    'p255_00_LZ.bin',
    'p125_00_LZ.bin',
    'p475_00_LZ.bin',
    'p196_00_LZ.bin',
    'p019_00_LZ.bin',
    'p109_00_LZ.bin',
    'p423_00_LZ.bin',
    'p279_00_LZ.bin',
    'p203_00_LZ.bin',
    'p490_00_LZ.bin',
    'p459_00_LZ.bin',
    'p398_00_LZ.bin',
    'p167_00_LZ.bin',
    'p484_00_LZ.bin',
    'p021_00_LZ.bin',
    'p092_00_LZ.bin',
    'p437_00_LZ.bin',
    'p000_00_LZ.bin',
    'p236_00_LZ.bin',
    'p416_00_LZ.bin',
    'p402_00_LZ.bin',
    'p128_00_LZ.bin',
    'p291_00_LZ.bin',
    'p258_00_LZ.bin',
    'p222_00_LZ.bin',
    'p364_00_LZ.bin',
    'p478_00_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
