prebuilt_files = [
    'bp399_LZ.bin',
    'bp299_LZ.bin',
    'bp387_LZ.bin',
    'bp287_LZ.bin',
    'bp041_LZ.bin',
    'bp022_LZ.bin',
    'bp395_LZ.bin',
    'bp122_LZ.bin',
    'bp077_LZ.bin',
    'bp491_LZ.bin',
    'bp169_LZ.bin',
    'bp483_LZ.bin',
    'bp065_LZ.bin',
    'bp006_LZ.bin',
    'bp437_LZ.bin',
    'bp429_LZ.bin',
    'bp378_LZ.bin',
    'bp278_LZ.bin',
    'bp454_LZ.bin',
    'bp305_LZ.bin',
    'bp205_LZ.bin',
    'bp274_LZ.bin',
    'bp425_LZ.bin',
    'bp458_LZ.bin',
    'bp446_LZ.bin',
    'bp221_LZ.bin',
    'bp096_LZ.bin',
    'bp470_LZ.bin',
    'bp321_LZ.bin',
    'bp196_LZ.bin',
    'bp401_LZ.bin',
    'bp462_LZ.bin',
    'bp084_LZ.bin',
    'bp368_LZ.bin',
    'bp439_LZ.bin',
    'bp215_LZ.bin',
    'bp315_LZ.bin',
    'bp444_LZ.bin',
    'bp276_LZ.bin',
    'bp427_LZ.bin',
    'bp456_LZ.bin',
    'bp207_LZ.bin',
    'bp435_LZ.bin',
    'bp364_LZ.bin',
    'bp448_LZ.bin',
    'bp319_LZ.bin',
    'bp219_LZ.bin',
    'bp331_LZ.bin',
    'bp460_LZ.bin',
    'bp403_LZ.bin',
    'bp252_LZ.bin',
    'bp198_LZ.bin',
    'bp094_LZ.bin',
    'bp472_LZ.bin',
    'bp323_LZ.bin',
    'bp240_LZ.bin',
    'bp411_LZ.bin',
    'bp297_LZ.bin',
    'bp020_LZ.bin',
    'bp397_LZ.bin',
    'bp120_LZ.bin',
    'bp043_LZ.bin',
    'bp389_LZ.bin',
    'bp179_LZ.bin',
    'bp004_LZ.bin',
    'bp167_LZ.bin',
    'bp067_LZ.bin',
    'bp116_LZ.bin',
    'bp075_LZ.bin',
    'bp008_LZ.bin',
    'bp227_LZ.bin',
    'bp476_LZ.bin',
    'bp190_LZ.bin',
    'bp239_LZ.bin',
    'bp468_LZ.bin',
    'bp344_LZ.bin',
    'bp415_LZ.bin',
    'bp182_LZ.bin',
    'bp464_LZ.bin',
    'bp082_LZ.bin',
    'bp419_LZ.bin',
    'bp248_LZ.bin',
    'bp407_LZ.bin',
    'bp356_LZ.bin',
    'bp256_LZ.bin',
    'bp303_LZ.bin',
    'bp452_LZ.bin',
    'bp203_LZ.bin',
    'bp431_LZ.bin',
    'bp260_LZ.bin',
    'bp211_LZ.bin',
    'bp440_LZ.bin',
    'bp311_LZ.bin',
    'bp423_LZ.bin',
    'bp372_LZ.bin',
    'bp112_LZ.bin',
    'bp489_LZ.bin',
    'bp071_LZ.bin',
    'bp171_LZ.bin',
    'bp100_LZ.bin',
    'bp000_LZ.bin',
    'bp485_LZ.bin',
    'bp063_LZ.bin',
    'bp136_LZ.bin',
    'bp281_LZ.bin',
    'bp128_LZ.bin',
    'bp028_LZ.bin',
    'bp393_LZ.bin',
    'bp124_LZ.bin',
    'bp059_LZ.bin',
    'bp147_LZ.bin',
    'bp073_LZ.bin',
    'bp110_LZ.bin',
    'bp038_LZ.bin',
    'bp138_LZ.bin',
    'bp045_LZ.bin',
    'bp291_LZ.bin',
    'bp026_LZ.bin',
    'bp391_LZ.bin',
    'bp126_LZ.bin',
    'bp057_LZ.bin',
    'bp134_LZ.bin',
    'bp478_LZ.bin',
    'bp229_LZ.bin',
    'bp405_LZ.bin',
    'bp354_LZ.bin',
    'bp254_LZ.bin',
    'bp180_LZ.bin',
    'bp466_LZ.bin',
    'bp246_LZ.bin',
    'bp417_LZ.bin',
    'bp225_LZ.bin',
    'bp092_LZ.bin',
    'bp474_LZ.bin',
    'bp258_LZ.bin',
    'bp409_LZ.bin',
    'bp421_LZ.bin',
    'bp442_LZ.bin',
    'bp362_LZ.bin',
    'bp433_LZ.bin',
    'bp450_LZ.bin',
    'bp471_LZ.bin',
    'bp320_LZ.bin',
    'bp197_LZ.bin',
    'bp220_LZ.bin',
    'bp097_LZ.bin',
    'bp089_LZ.bin',
    'bp085_LZ.bin',
    'bp185_LZ.bin',
    'bp332_LZ.bin',
    'bp463_LZ.bin',
    'bp251_LZ.bin',
    'bp400_LZ.bin',
    'bp204_LZ.bin',
    'bp455_LZ.bin',
    'bp304_LZ.bin',
    'bp279_LZ.bin',
    'bp428_LZ.bin',
    'bp379_LZ.bin',
    'bp436_LZ.bin',
    'bp367_LZ.bin',
    'bp447_LZ.bin',
    'bp459_LZ.bin',
    'bp424_LZ.bin',
    'bp275_LZ.bin',
    'bp115_LZ.bin',
    'bp015_LZ.bin',
    'bp168_LZ.bin',
    'bp068_LZ.bin',
    'bp490_LZ.bin',
    'bp076_LZ.bin',
    'bp007_LZ.bin',
    'bp019_LZ.bin',
    'bp398_LZ.bin',
    'bp394_LZ.bin',
    'bp123_LZ.bin',
    'bp040_LZ.bin',
    'bp066_LZ.bin',
    'bp005_LZ.bin',
    'bp078_LZ.bin',
    'bp109_LZ.bin',
    'bp009_LZ.bin',
    'bp492_LZ.bin',
    'bp074_LZ.bin',
    'bp117_LZ.bin',
    'bp388_LZ.bin',
    'bp142_LZ.bin',
    'bp042_LZ.bin',
    'bp396_LZ.bin',
    'bp121_LZ.bin',
    'bp296_LZ.bin',
    'bp021_LZ.bin',
    'bp133_LZ.bin',
    'bp253_LZ.bin',
    'bp353_LZ.bin',
    'bp402_LZ.bin',
    'bp230_LZ.bin',
    'bp330_LZ.bin',
    'bp461_LZ.bin',
    'bp410_LZ.bin',
    'bp241_LZ.bin',
    'bp473_LZ.bin',
    'bp322_LZ.bin',
    'bp222_LZ.bin',
    'bp377_LZ.bin',
    'bp426_LZ.bin',
    'bp277_LZ.bin',
    'bp445_LZ.bin',
    'bp438_LZ.bin',
    'bp218_LZ.bin',
    'bp449_LZ.bin',
    'bp434_LZ.bin',
    'bp365_LZ.bin',
    'bp457_LZ.bin',
    'bp306_LZ.bin',
    'bp037_LZ.bin',
    'bp280_LZ.bin',
    'bp058_LZ.bin',
    'bp392_LZ.bin',
    'bp125_LZ.bin',
    'bp025_LZ.bin',
    'bp170_LZ.bin',
    'bp488_LZ.bin',
    'bp013_LZ.bin',
    'bp484_LZ.bin',
    'bp101_LZ.bin',
    'bp361_LZ.bin',
    'bp430_LZ.bin',
    'bp302_LZ.bin',
    'bp453_LZ.bin',
    'bp422_LZ.bin',
    'bp373_LZ.bin',
    'bp273_LZ.bin',
    'bp441_LZ.bin',
    'bp414_LZ.bin',
    'bp469_LZ.bin',
    'bp477_LZ.bin',
    'bp226_LZ.bin',
    'bp257_LZ.bin',
    'bp406_LZ.bin',
    'bp418_LZ.bin',
    'bp465_LZ.bin',
    'bp334_LZ.bin',
    'bp443_LZ.bin',
    'bp312_LZ.bin',
    'bp212_LZ.bin',
    'bp420_LZ.bin',
    'bp371_LZ.bin',
    'bp200_LZ.bin',
    'bp451_LZ.bin',
    'bp363_LZ.bin',
    'bp432_LZ.bin',
    'bp081_LZ.bin',
    'bp236_LZ.bin',
    'bp181_LZ.bin',
    'bp467_LZ.bin',
    'bp255_LZ.bin',
    'bp404_LZ.bin',
    'bp355_LZ.bin',
    'bp228_LZ.bin',
    'bp359_LZ.bin',
    'bp408_LZ.bin',
    'bp259_LZ.bin',
    'bp324_LZ.bin',
    'bp475_LZ.bin',
    'bp193_LZ.bin',
    'bp093_LZ.bin',
    'bp416_LZ.bin',
    'bp247_LZ.bin',
    'bp390_LZ.bin',
    'bp127_LZ.bin',
    'bp027_LZ.bin',
    'bp044_LZ.bin',
    'bp139_LZ.bin',
    'bp039_LZ.bin',
    'bp148_LZ.bin',
    'bp282_LZ.bin',
    'bp135_LZ.bin',
    'bp056_LZ.bin',
    'bp486_LZ.bin',
    'bp111_LZ.bin',
    'bp172_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
