prebuilt_files = [
    'bt026_00_LZ.bin',
    'bt337_01_LZ.bin',
    'bt018_02_LZ.bin',
    'bt032_00_LZ.bin',
    'bt048_00_LZ.bin',
    'bt081_00_LZ.bin',
    'bt066_01_LZ.bin',
    'bt013_00_LZ.bin',
    'bt014_04_LZ.bin',
    'bt069_00_LZ.bin',
    'bt319_00_LZ.bin',
    'bt007_00_LZ.bin',
    'bt024_01_LZ.bin',
    'bt045_00_LZ.bin',
    'bt064_00_LZ.bin',
    'bt070_00_LZ.bin',
    'bt060_01_LZ.bin',
    'bt001_00_LZ.bin',
    'bt020_00_LZ.bin',
    'bt087_00_LZ.bin',
    'bt034_00_LZ.bin',
    'bt062_00_LZ.bin',
    'bt018_00_LZ.bin',
    'bt026_02_LZ.bin',
    'bt022_01_LZ.bin',
    'bt057_00_LZ.bin',
    'bt043_00_LZ.bin',
    'bt319_02_LZ.bin',
    'bt039_00_LZ.bin',
    'bt046_01_LZ.bin',
    'bt033_00_LZ.bin',
    'bt049_00_LZ.bin',
    'bt080_00_LZ.bin',
    'bt027_00_LZ.bin',
    'bt052_01_LZ.bin',
    'bt023_03_LZ.bin',
    'bt006_00_LZ.bin',
    'bt012_00_LZ.bin',
    'bt068_00_LZ.bin',
    'bt014_02_LZ.bin',
    'bt044_00_LZ.bin',
    'bt025_01_LZ.bin',
    'bt050_00_LZ.bin',
    'bt071_00_LZ.bin',
    'bt065_00_LZ.bin',
    'bt014_00_LZ.bin',
    'bt086_00_LZ.bin',
    'bt035_00_LZ.bin',
    'bt021_00_LZ.bin',
    'bt019_00_LZ.bin',
    'bt038_00_LZ.bin',
    'bt023_01_LZ.bin',
    'bt056_00_LZ.bin',
    'bt011_00_LZ.bin',
    'bt005_00_LZ.bin',
    'bt051_01_LZ.bin',
    'bt024_00_LZ.bin',
    'bt030_00_LZ.bin',
    'bt083_00_LZ.bin',
    'bt319_01_LZ.bin',
    'bt066_00_LZ.bin',
    'bt072_00_LZ.bin',
    'bt008_00_LZ.bin',
    'bt026_01_LZ.bin',
    'bt029_00_LZ.bin',
    'bt337_00_LZ.bin',
    'bt047_00_LZ.bin',
    'bt022_00_LZ.bin',
    'bt058_00_LZ.bin',
    'bt085_00_LZ.bin',
    'bt066_02_LZ.bin',
    'bt036_00_LZ.bin',
    'bt018_01_LZ.bin',
    'bt337_02_LZ.bin',
    'bt003_00_LZ.bin',
    'bt055_00_LZ.bin',
    'bt041_00_LZ.bin',
    'bt004_00_LZ.bin',
    'bt010_00_LZ.bin',
    'bt031_00_LZ.bin',
    'bt014_03_LZ.bin',
    'bt082_00_LZ.bin',
    'bt025_00_LZ.bin',
    'bt073_00_LZ.bin',
    'bt009_00_LZ.bin',
    'bt023_02_LZ.bin',
    'bt046_00_LZ.bin',
    'bt052_00_LZ.bin',
    'bt027_01_LZ.bin',
    'bt028_00_LZ.bin',
    'bt084_00_LZ.bin',
    'bt037_00_LZ.bin',
    'bt023_00_LZ.bin',
    'bt215_00_LZ.bin',
    'bt059_00_LZ.bin',
    'bt002_00_LZ.bin',
    'bt052_02_LZ.bin',
    'bt040_00_LZ.bin',
    'bt021_01_LZ.bin',
    'bt014_01_LZ.bin',
    'bt061_00_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
