prebuilt_files = [
    'title_ue00_LZ.bin',
    'title_ue12_LZ.bin',
    'copyright002_LZ.bin',
    'title_ue10_LZ.bin',
    'title_ue02_LZ.bin',
    'copyright000_LZ.bin',
    'dammytitle_LZ.bin',
    'title_ue01_LZ.bin',
    'title_ue13_LZ.bin',
    'copyright001_LZ.bin',
    'title_ue11_LZ.bin',
    'title_ue03_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
