prebuilt_files = [
    'm008.fsb',
    'm034.fsb',
    'm020.fsb',
    'm021.fsb',
    'm035.fsb',
    'm009.fsb',
    'm023.fsb',
    'm036.fsb',
    'm022.fsb',
    'm026.fsb',
    'm032.fsb',
    'm033.fsb',
    'm027.fsb',
    'm025.fsb',
    'm019.fsb',
    'm018.fsb',
    'm024.fsb',
    'm030.fsb',
    'm043.fsb',
    'm042.fsb',
    'm041.fsb',
    'm044.fsb',
    'm029.fsb',
    'm015.fsb',
    'm001.fsb',
    'm000.fsb',
    'm014.fsb',
    'm028.fsb',
    'm002.fsb',
    'm016.fsb',
    'm201.fsb',
    'm017.fsb',
    'm003.fsb',
    'm007.fsb',
    'm006.fsb',
    'm010.fsb',
    'm004.fsb',
    'm038.fsb',
    'm039.fsb',
    'm005.fsb',
    'm011.fsb',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
