prebuilt_files = [
    'c025.fsb',
    'c031.fsb',
    'c019.fsb',
    'c018.fsb',
    'c030.fsb',
    'c024.fsb',
    'c032.fsb',
    'c026.fsb',
    'c027.fsb',
    'c033.fsb',
    'c037.fsb',
    'c023.fsb',
    'c022.fsb',
    'c036.fsb',
    'c008.fsb',
    'c020.fsb',
    'c034.fsb',
    'c035.fsb',
    'c021.fsb',
    'c009.fsb',
    'c046.fsb',
    'c052.fsb',
    'c053.fsb',
    'c047.fsb',
    'c051.fsb',
    'c045.fsb',
    'c044.fsb',
    'c050.fsb',
    'c068.fsb',
    'c054.fsb',
    'c040.fsb',
    'c041.fsb',
    'c055.fsb',
    'c069.fsb',
    'c043.fsb',
    'c057.fsb',
    'c056.fsb',
    'c042.fsb',
    'c067.fsb',
    'c073.fsb',
    'c072.fsb',
    'c066.fsb',
    'c070.fsb',
    'c064.fsb',
    'c058.fsb',
    'c059.fsb',
    'c065.fsb',
    'c071.fsb',
    'c049.fsb',
    'c075.fsb',
    'c061.fsb',
    'c060.fsb',
    'c074.fsb',
    'c048.fsb',
    'c062.fsb',
    'c063.fsb',
    'c004.fsb',
    'c010.fsb',
    'c038.fsb',
    'c039.fsb',
    'c011.fsb',
    'c005.fsb',
    'c013.fsb',
    'c007.fsb',
    'c006.fsb',
    'c012.fsb',
    'c016.fsb',
    'c002.fsb',
    'c003.fsb',
    'c017.fsb',
    'c029.fsb',
    'c001.fsb',
    'c015.fsb',
    'c014.fsb',
    'c000.fsb',
    'c028.fsb',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
