prebuilt_files = [
    'q045.fsb',
    'q051.fsb',
    'q050.fsb',
    'q044.fsb',
    'q052.fsb',
    'q046.fsb',
    'q047.fsb',
    'q053.fsb',
    'q057.fsb',
    'q043.fsb',
    'q042.fsb',
    'q056.fsb',
    'q040.fsb',
    'q054.fsb',
    'q055.fsb',
    'q041.fsb',
    'q026.fsb',
    'q032.fsb',
    'q033.fsb',
    'q027.fsb',
    'q019.fsb',
    'q031.fsb',
    'q025.fsb',
    'q024.fsb',
    'q030.fsb',
    'q018.fsb',
    'q034.fsb',
    'q020.fsb',
    'q008.fsb',
    'q009.fsb',
    'q021.fsb',
    'q035.fsb',
    'q023.fsb',
    'q037.fsb',
    'q036.fsb',
    'q022.fsb',
    'q007.fsb',
    'q013.fsb',
    'q012.fsb',
    'q006.fsb',
    'q038.fsb',
    'q010.fsb',
    'q004.fsb',
    'q005.fsb',
    'q011.fsb',
    'q039.fsb',
    'q015.fsb',
    'q001.fsb',
    'q029.fsb',
    'q028.fsb',
    'q000.fsb',
    'q014.fsb',
    'q002.fsb',
    'q016.fsb',
    'q017.fsb',
    'q003.fsb',
    'q058.fsb',
    'q059.fsb',
    'q061.fsb',
    'q049.fsb',
    'q048.fsb',
    'q060.fsb',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
