prebuilt_files = [
    'capbg057_LZ.bin',
    'capbg034_LZ.bin',
    'capbg049_LZ.bin',
    'capbg038_LZ.bin',
    'capbg045_LZ.bin',
    'capbg026_LZ.bin',
    'capbg073_LZ.bin',
    'capbg010_LZ.bin',
    'capbg002_LZ.bin',
    'capbg024_LZ.bin',
    'capbg059_LZ.bin',
    'capbg047_LZ.bin',
    'capbg036_LZ.bin',
    'capbg028_LZ.bin',
    'capbg055_LZ.bin',
    'capbg000_LZ.bin',
    'capbg012_LZ.bin',
    'capbg071_LZ.bin',
    'capbg016_LZ.bin',
    'capbg008_LZ.bin',
    'capbg004_LZ.bin',
    'capbg032_LZ.bin',
    'capbg051_LZ.bin',
    'capbg020_LZ.bin',
    'capbg043_LZ.bin',
    'capbg018_LZ.bin',
    'capbg006_LZ.bin',
    'capbg014_LZ.bin',
    'capbg041_LZ.bin',
    'capbg022_LZ.bin',
    'capbg053_LZ.bin',
    'capbg030_LZ.bin',
    'capbg011_LZ.bin',
    'capbg072_LZ.bin',
    'capbg003_LZ.bin',
    'capbg048_LZ.bin',
    'capbg035_LZ.bin',
    'capbg056_LZ.bin',
    'capbg027_LZ.bin',
    'capbg044_LZ.bin',
    'capbg039_LZ.bin',
    'capbg001_LZ.bin',
    'capbg070_LZ.bin',
    'capbg013_LZ.bin',
    'capbg046_LZ.bin',
    'capbg058_LZ.bin',
    'capbg025_LZ.bin',
    'capbg054_LZ.bin',
    'capbg029_LZ.bin',
    'capbg037_LZ.bin',
    'capbg050_LZ.bin',
    'capbg033_LZ.bin',
    'capbg042_LZ.bin',
    'capbg021_LZ.bin',
    'capbg009_LZ.bin',
    'capbg017_LZ.bin',
    'capbg005_LZ.bin',
    'capbg023_LZ.bin',
    'capbg040_LZ.bin',
    'capbg031_LZ.bin',
    'capbg052_LZ.bin',
    'capbg007_LZ.bin',
    'capbg019_LZ.bin',
    'capbg015_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
