prebuilt_files = [
    'komorebi.ntfp',
    'dokarimo02.ntft',
    'ef105_LZ.bin',
    'ew004_LZ.bin',
    'dokarimo03.ntft',
    'ew008_LZ.bin',
    'kiri01.ntft',
    'suna02.ntft',
    'ef103_LZ.bin',
    'ew000_LZ.bin',
    'suna01.ntfp',
    'kiri02.ntfp',
    'ef013_LZ.bin',
    'ef001_LZ.bin',
    'ef101_LZ.bin',
    'ef104_LZ.bin',
    'komorebi.ntft',
    'dokarimo02.ntfp',
    'dokarimo03.ntfp',
    'kiri01.ntfp',
    'ef014_LZ.bin',
    'suna02.ntfp',
    'suna01.ntft',
    'ef102_LZ.bin',
    'kiri02.ntft',
    'ef010_LZ.bin',
    'ef012_LZ.bin',
    'ef100_LZ.bin',
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach
